test/corpus/L1/negative/unclosed-dynarray.st
"---
id: unclosed-dynarray
kind: negative
phase: parse
layer: L1
spec: anexoA:error.unclosed-dynarray
origin: spec-ANSI
section: error.unclosed-dynarray
note: dynamic array missing closing brace
codes: E_UNCLOSED_DYNARRAY
---"
{1. 2
